# confidential-computing-modules

./: .dockerignore  .drone.yml  .env.sample  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  azure-pipelines.yml  docker-compose-anonify.yml  docker-compose.yml  e2e-docker-compose.yml  esop-docker-compose.yml  occlum-docker-compose.yml  pgx-docker-compose.yml  server.Dockerfile
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.quorum/: istanbul-genesis.json  permissioned-nodes.json
cli/: Cargo.toml
client/: Cargo.toml
client/ecies-wasm/: Cargo.toml
client/ecies-wasm/src/: dh.rs  ecies.rs  hkdf.rs  hmac.rs  lib.rs  wasm.rs
client/src/: commands.rs  config.rs  main.rs
client/wallet/: Cargo.toml
client/wallet/src/: keyfile.rs  lib.rs
config/: Cargo.toml  Enclave.config.xml  IntegrationTestEnclave.config.xml  UnitTestEnclave.config.xml  config.toml  enclave_pub.pem
config/src/: constants.rs  lib.rs  read_toml.rs
contracts/: Anonify.sol  AnonymousAsset.sol  AnonymousERC20.sol  Base64.sol  ReportHandle.sol  ReportsHandle.sol  SolRsaVerify.sol  reportsHandle.sol
core/: Makefile
core/app/: Cargo.toml  build.rs
core/app-preluder/: Cargo.toml
core/app-preluder/src/: lib.rs
core/app/src/: attestation.rs  auto_ffi.rs  config.rs  constants.rs  equote.rs  error.rs  init_enclave.rs  lib.rs  main.rs  ocalls.rs  tests.rs
core/app/src/web3/: anonymous_asset.rs  erc20.rs
core/bc-connector/: Cargo.toml
core/bc-connector/src/: error.rs  eventdb.rs  lib.rs  traits.rs  utils.rs
core/bc-connector/src/eth/: client.rs  primitives.rs
core/ciphertext/: Cargo.toml
core/ciphertext/src/: lib.rs
core/common/: Cargo.toml  build.rs
core/common/src/: commands.rs  context_switch.rs  crypto.rs  kvs.rs  lib.rs  plugin_types.rs  state_types.rs  stf.rs  traits.rs  types.rs  value.rs
core/ecalls/: Cargo.toml
core/ecalls/src/: lib.rs  register.rs  state_machine.rs
core/enclave/: Cargo.toml  Enclave.edl  Makefile
core/enclave-rpc/: Cargo.toml
core/enclave-rpc/src/: client.rs  config.rs  lib.rs  server.rs  service.rs  transport.rs
core/enclave/src/: attestation.rs  auto_ffi.rs  cert.rs  config.rs  context.rs  crypto.rs  ecall_handler.rs  ecalls.rs  error.rs  group_key.rs  instructions.rs  kvs.rs  lib.rs  notify.rs  ocalls.rs  quote.rs  rpc.rs  sealing.rs  state.rs  stf.rs  tests.rs  transaction.rs  workflow.rs
core/enclave/src/bridges/: auto_ffi.rs  ecall_handler.rs  ecalls.rs  inner_ecalls.rs  mod.rs  ocalls.rs
core/enclave/src/kvs/: memorydb.rs  mod.rs  traits.rs
core/event-watcher/: Cargo.toml
core/event-watcher/src/: error.rs  eventdb.rs  lib.rs  traits.rs
core/event-watcher/src/eth/: client.rs  primitives.rs
core/host/: Cargo.toml  anonify-types.h  build.rs
core/host/benches/: erc20.rs
core/host/src/: attestation.rs  auto_ffi.rs  components.rs  constants.rs  dispatcher.rs  ecalls.rs  error.rs  eventdb.rs  init_enclave.rs  lib.rs  mock.rs  ocalls.rs  prelude.rs  tests.rs  traits.rs  utils.rs  workflow.rs
core/host/src/bridges/: auto_ffi.rs  ecalls.rs  mod.rs  ocalls.rs
core/host/src/eth/: client.rs  primitives.rs
core/host/src/transaction/: dispatcher.rs  eventdb.rs  mod.rs  sgx_dispatcher.rs  utils.rs
core/host/src/transaction/eth/: client.rs  mod.rs  primitives.rs
core/host/src/web3/: anonymous_asset.rs  eventdb.rs  mod.rs
core/rpc-handler/: Cargo.toml
core/rpc-handler/src/: error.rs  eventdb.rs  lib.rs  traits.rs  utils.rs
core/rpc-handler/src/eth/: client.rs  mod.rs  primitives.rs
core/runtime/: Cargo.toml
core/runtime/src/: impls.rs  lib.rs  prelude.rs  primitives.rs  state_type.rs  traits.rs  utils.rs
core/treekem/: Cargo.toml
core/treekem/src/: application.rs  crypto.rs  group_state.rs  handshake.rs  lib.rs  ratchet_tree.rs  test_utils.rs  tree_math.rs
core/treekem/src/crypto/: aead.rs  dh.rs  ecies.rs  hkdf.rs  hmac.rs  mod.rs  secrets.rs
docker/: Dockerfile  README.md  base-anonify-dev-pgx.Dockerfile  base-anonify-dev.Dockerfile  base-encrypted-sql-ops-pg.Dockerfile  base-occlum-enclave.Dockerfile  base-occlum-host.Dockerfile  base-occlum.Dockerfile  base-rust-sgx-sdk-rootless.Dockerfile  cached.server.Dockerfile  deployer.Dockerfile  dev.Dockerfile  docker-compose-anonify-quorum.yml  docker-compose-anonify.yml  docker-compose-drone.yml  erc20.Dockerfile  example-encrypted-sql-ops-pg.Dockerfile  example-erc20.Dockerfile  example-keyvault.Dockerfile  keyvault.Dockerfile  occlum.Dockerfile  rust-sgx-sdk-rootless.Dockerfile  server.Dockerfile
docs/: dir_structure.md  (+1 more)
ethereum/deployer/: Cargo.toml  README.md
ethereum/deployer/src/: deployer.rs  lib.rs  main.rs
example/anonymous-asset/: Cargo.toml
example/anonymous-asset/src/: api.rs
example/app/: Cargo.toml
example/app/src/: lib.rs
example/cli/: Cargo.toml
example/cli/src/: commands.rs  config.rs  error.rs  main.rs
example/cli/src/term/: mod.rs
example/server/: .env.template  Cargo.toml  Rocket.toml
example/server/src/: api.rs  handlers.rs  main.rs
example/stf/: Cargo.toml
example/stf/src/: lib.rs  state_type.rs  value.rs
example/wallet/: Cargo.toml
example/wallet/src/: constants.rs  error.rs
frame/azure-client/: .gitignore  Cargo.toml  README.md  docker-compose.yml
frame/azure-client/blob/: Cargo.toml
frame/azure-client/blob/src/: blob_client.rs
frame/azure-client/src/: blob.rs  lib.rs
frame/azure-client/src/blob/: blob.rs  mod.rs
frame/azure-client/tests/: integration_test.rs
frame/common/: Cargo.toml
frame/common/src/: benchmark.rs  crypto.rs  kvs.rs  lib.rs  request.rs  state_types.rs  traits.rs
frame/common/src/ciphertexts/: enclave_key.rs  mod.rs  treekem.rs
frame/common/src/key_vault/: request.rs  response.rs
frame/config/: Cargo.toml
frame/config/src/: envs.rs  lib.rs  measurement.rs
frame/ecies/: Cargo.toml
frame/ecies/src/: dh.rs  ecies.rs  hkdf.rs  hmac.rs  lib.rs  wasm.rs
https-enclave/: Cargo.toml
https-enclave/src/: cache.rs  client.rs  error.rs  https.rs  lib.rs
wallet/: Cargo.toml
wallet/src/: constants.rs  disk.rs  error.rs  keyfile.rs  lib.rs
(+541 files in other folders)
