[workspace]
members = [
    "frame/enclave",
    "frame/host",
    "frame/common",
    "frame/types",
    "frame/treekem",
    "frame/sodium",
    "frame/runtime",
    "frame/remote-attestation",
    "frame/mra-tls",
    "frame/retrier",
    "frame/config",
    "modules/anonify-enclave",
    "modules/anonify-eth-driver",
    "modules/anonify-ecall-types",
    "modules/key-vault-enclave",
    "modules/key-vault-host",
    "modules/key-vault-ecall-types",
    "modules/encrypted-sql-ops-enclave",
    "modules/encrypted-sql-ops-host",
    "modules/encrypted-sql-ops-ecall-types",
    "nodes/key-vault",
    "nodes/state-runtime/api",
    "nodes/state-runtime/server",
    "example/erc20/cli",
    "example/erc20/enclave",
    "example/erc20/server",
    "example/key-vault/enclave",
    "example/key-vault/server",
    "example/encrypted-sql-ops/enclave",
    "example/wallet",
    "tests/integration",
    "tests/units/enclave",
    "tests/units/host",
    "tests/utils",
]
exclude = [
    # If adding this to workspace, top-level `cargo check` needs `pgx` installed and initialized.
    "example/encrypted-sql-ops/pg-extension",
]
