[workspace]
members = [
    "frame/enclave",
    "frame/host",
    "frame/common",
    "frame/types",
    "frame/treekem",
    "frame/sodium",
    "frame/runtime",
    "frame/remote-attestation",
    "frame/mra-tls",
    "frame/retrier",
    "frame/config",
    "frame/azure-client",
    "modules/anonify-enclave",
    "modules/anonify-eth-driver",
    "modules/anonify-ecall-types",
    "modules/key-vault-enclave",
    "modules/key-vault-host",
    "modules/key-vault-ecall-types",
    "modules/occlum-enclave",
    "modules/occlum-host",
    "nodes/key-vault",
    "nodes/state-runtime/api",
    "nodes/state-runtime/server",
    "example/erc20/cli",
    "example/erc20/enclave",
    "example/erc20/server",
    "example/key-vault/enclave",
    "example/key-vault/server",
    "example/occlum/rpc-types",
    "example/occlum/enclave",
    "example/occlum/host",
    "example/wallet",
    "tests/integration",
    "tests/units/enclave",
    "tests/units/host",
    "tests/utils",
]
