[package]
name = "client"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonify-app = { path = "../core/app" }
clap = "~2.32"
rand = "0.7"
console = "0.7"
dialoguer = "0.4"
