[package]
name = "anonify-config"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
toml-sgx = { package = "toml",rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/toml-rs-sgx.git", optional = true }
toml-std = { package = "toml", version = "0.5", optional = true }
anyhow-sgx = { package = "anyhow", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
anyhow-std = { package = "anyhow", version = "1.0", optional = true }
serde-sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.1.3", default-features = false, optional = true }
serde-std = { package = "serde", version = "1", default-features = false, optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pem = { version = "0.8.2", git = "https://github.com/mesalock-linux/pem-rs-sgx", optional = true }
hex = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = [
    "toml-std",
    "anyhow-std",
    "serde-std",
    "serde-std/derive",
]
sgx = [
    "toml-sgx",
    "anyhow-sgx",
    "serde-sgx",
    "serde-sgx/derive",
    "sgx_tstd",
    "pem",
]
