[package]
name = "anonify-wallet"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
frame-common = { path = "../frame/common" }
ed25519-dalek = "1.0.0-pre.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
parity-crypto = "0.4"
smallvec = "0.6"
chrono = "0.4"
rand = "0.7"
anyhow = "1.0"
thiserror = "1.0"
