[package]
name = "anonify-app-preluder"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
anonify-common = { path = "../common", default-features = false }
anonify-runtime = { path = "../runtime", default-features = false }
app = { path = "../../example/app", default-features = false }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false }

[features]
default = ["std"]
std = [
    "app/std",
    "anonify-common/std",
    "anonify-runtime/std",
]
sgx = [
    "app/sgx",
    "anonify-common/sgx",
    "anonify-runtime/sgx",
    "sgx_tstd",
]
