[package]
name = "anonify-app-preluder"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
anonify-common = { path = "../common", default-features = false }
anonify-runtime = { path = "../runtime", default-features = false }
erc20-app = { path = "../../example/erc20/app", default-features = false }
dx-app = { path = "../../example/invoice-dx/app", default-features = false }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false }

[features]
default = ["std"]
std = [
    "erc20-app/std",
    "dx-app/std",
    "anonify-common/std",
    "anonify-runtime/std",
]
sgx = [
    "erc20-app/sgx",
    "dx-app/sgx",
    "anonify-common/sgx",
    "anonify-runtime/sgx",
    "sgx_tstd",
]
