[package]
name = "anonify-app"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/mesatee-sgx" }
sgx_urts = { git = "https://github.com/apache/mesatee-sgx" }
dirs = "2.0"
failure = "0.1.6"

[build-dependencies]
bindgen = "0.51"
dirs = "2.0"
