[package]
name = "anonify-bc-connector"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
anonify-types = { path = "../types" }
anonify-common = { path = "../common" }
web3 = "0.8"
ethabi = "8.0.0"
byteorder = "1"
sgx_types = "1.1.1" # TODO: Remove
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
hex = "0.4"
