[package]
name = "anonify-ciphertext"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonify-common = { path = "../common", default-features = false }
anonify-runtime = { path = "../runtime", default-features = false }
anonify-app = { path = "../../example/app", default-features = false }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std"]
std = [
    "anonify-app/std",
    "anonify-common/std",
    "anonify-runtime/std",
]
sgx = [
    "anonify-app/sgx",
    "anonify-common/sgx",
    "anonify-runtime/sgx",
    "sgx_tstd",
]
