[package]
name = "anonify-common"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonify-types = { path = "../types", default-features = false }
ed25519-dalek = { version = "1.0.0-pre.2", default-features = false, features = ["u64_backend"] }
sha2 = { version = "0.8", default-features = false }
tiny-keccak = "1.4"
serde-std = { package = "serde", version = "1", default-features = false, optional = true }
serde-sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.1.0", default-features = false, optional = true }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
base64 = { version = "0.11", optional = true }
web3 = { version = "0.8", optional = true }
rand = { version = "0.6", optional = true }
rand_core = { version = "0.3", optional = true }
rand_os = { version = "0.1", optional = true }
sgx-elastic-array = { package = "elastic-array", tag = "sgx_1.1.0", git = "https://github.com/mesalock-linux/elastic-array-sgx.git", optional = true }
elastic-array = { version = "0.10", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
anyhow = { version = "1.0", optional = true }
sgx-anyhow = { rev = "sgx_1.1.0", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
sgx_trts = { version = "1.1.0", optional = true }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[features]
default = ["std"]
std = [
    "serde-std/std",
    "serde-std/derive",
    "base64",
    "web3",
    "rand",
    "rand_core",
    "rand_os",
    "elastic-array",
    "anyhow",
]
sgx = [
    "sgx_tstd",
    "serde-sgx",
    "serde-sgx/derive",
    "sgx-elastic-array",
    "sgx-anyhow",
    "sgx_trts",
]
