[package]
name = "anonify-common"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
frame-common = { path = "../../frame/common", default-features = false }
ed25519-dalek = { version = "1.0.0-pre.2", default-features = false, features = ["u64_backend"] }
sha2 = { version = "0.8", default-features = false }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
base64 = { version = "0.11", optional = true }
sgx-elastic-array = { package = "elastic-array", tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/elastic-array-sgx.git", optional = true }
elastic-array = { version = "0.10", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
anyhow = { version = "1.0", optional = true }
sgx-anyhow = { rev = "sgx_1.1.2", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
libsecp256k1 = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = [
    "frame-common/std",
    "base64",
    "elastic-array",
    "anyhow",
]
sgx = [
    "frame-common/sgx",
    "sgx_tstd",
    "sgx-elastic-array",
    "sgx-anyhow",
]
