[package]
name = "anonify-common"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
frame-common = { path = "../../frame/common", default-features = false }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
libsecp256k1 = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = [
    "frame-common/std",
]
sgx = [
    "frame-common/sgx",
    "sgx_tstd",
]
