[package]
name = "anonify-enclave-rpc"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rustls = { branch = "mesalock_sgx", git = "https://github.com/mesalock-linux/rustls" }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net"] }
anyhow = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
serde_json = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/serde-sgx.git" }
threadpool = { git = "https://github.com/mesalock-linux/rust-threadpool-sgx" }
log = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/log-sgx" }
http = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/http-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
