[package]
name = "anonify-enclave"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[lib]
name = "anonifyenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
anonify-types = { path = "../types", default-features = false, features = ["sgx"] }
anonify-common = { path = "../common", default-features = false, features = ["sgx"] }
https-enclave = { path = "../../https-enclave" }
ring = { tag = "v0.16.5", git = "https://github.com/mesalock-linux/ring-sgx" }
ed25519-dalek = { version = "1.0.0-pre.2", default-features = false, features = ["u64_backend"] }
lazy_static = {version = "1.4", features = ["spin_no_std"] }
byteorder = { version = "1", default-features = false }
sha2 = { version = "0.8", default-features = false }
base64 = { rev = "sgx_1.0.9", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
hex = { version = "0.4", default-features = false }
log = { version = "0.4", git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { version = "0.7", git = "https://github.com/mesalock-linux/env_logger-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
httparse = { version = "1.3", default-features = false }
# serde_json = { rev = "sgx_1.0.9", git = "https://github.com/mesalock-linux/serde-json-sgx"}

sgx_tse = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_types = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_trts = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tcrypto  = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tseal  = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
