[package]
name = "anonify-enclave"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[lib]
name = "anonifyenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
anonify-types = { path = "../types", default-features = false }
anonify-common = { path = "../common", default-features = false, features = ["sgx"] }
anonify-app-preluder = { path = "../app-preluder", default-features = false, features = ["sgx"] }
anonify-runtime = { path = "../runtime", default-features = false, features = ["sgx"] }
anonify-attestation = { path = "../attestation" }
anonify-enclave-rpc = { path = "../enclave-rpc" }
anonify-treekem = { path = "../treekem" }

ed25519-dalek = { version = "1.0.0-pre.2", default-features = false, features = ["u64_backend"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
sha2 = { version = "0.8", default-features = false }
httparse = { version = "1.3", default-features = false }
libsecp256k1 = { version = "0.2", default-features = false }
hex = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false }
anyhow = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx.git" }
serde_json = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/serde-json-sgx" }
chrono = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/chrono-sgx" }
ring = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
base64 = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
log = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/env_logger-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
rustls = { branch = "mesalock_sgx", git = "https://github.com/mesalock-linux/rustls" }

sgx_tse = "1.1.0"
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand = "1.1.0"
sgx_types = "1.1.0"
sgx_trts = "1.1.0"
sgx_tcrypto  = "1.1.0"
sgx_tseal  = "1.1.0"
sgx_tunittest = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
