[package]
name = "anonify-runtime"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
anonify-common = { path = "../common", default-features = false }
anonify-types = { path = "../types" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
anyhow = { version = "1.0", optional = true }
sgx-anyhow = { rev = "sgx_1.1.2", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }

[features]
default = ["std"]
std = [
    "anonify-common/std",
    "anyhow",
]
sgx = [
    "anonify-common/sgx",
    "sgx_tstd",
    "sgx-anyhow",
]
