[package]
name = "anonify-runtime"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
anonify-common = { path = "../common", default-features = false, features = ["sgx"]}
anonify-types = { path = "../types" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
sgx-anyhow = { rev = "sgx_1.1.2", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git"}
anonify-treekem = { path = "../treekem"}
