[package]
name = "anonify-runtime"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
anonify-common = { path = "../common", default-features = false }
frame-types = { path = "../../frame/types" }
anonify-treekem = { path = "../treekem", optional = true }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
anyhow-std = { version = "1.0", package = "anyhow", optional = true }
anyhow-sgx = { rev = "sgx_1.1.2", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
libsecp256k1 = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = [
    "anonify-common/std",
    "anyhow-std",
]
sgx = [
    "anonify-common/sgx",
    "sgx_tstd",
    "anyhow-sgx",
    "anonify-treekem",
]
