[package]
name = "treekem"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net"] }
anyhow = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
libsecp256k1 = { version = "0.2", default-features = false }
rand = { rev = "v0.6.5_sgx1.1.0", git = "https://github.com/mesalock-linux/rand-sgx"}
ring = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false }
