[package]
name = "eth-deployer"
version = "0.5.4"
authors = ["LayerX Labs <div-labs@layerx.co.jp>"]
edition = "2018"

[dependencies]
anonify-eth-driver = { path = "../../modules/anonify-eth-driver"}
frame-retrier = { path = "../../frame/retrier" }
frame-config = { path = "../../frame/config" }
web3 = "0.14"
hex = "0.4"