[package]
name = "anonymous-asset"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonify-common = { path = "../../core/common" }
anonify-stf = { path = "../stf" }
serde = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "1.0.0-pre.2", features = ["serde"] }
rand = "0.7"
serde-big-array = "0.2"
web3 = "0.8"
