[package]
name = "app"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonify-common = { path = "../../core/common", default-features = false }
anonify-runtime = { path = "../../core/runtime", default-features = false }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
# anyhow = "1.0"
rand_os = { version = "0.1", optional = true }

[features]
default = ["std"]
std = [
    "anonify-common/std",
    "anonify-runtime/std",
    "rand_os"
]
sgx = [
    "anonify-common/sgx",
    "anonify-runtime/sgx",
    "sgx_tstd",
]
