[package]
name = "anonify-server"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
app = { path = "../app" }
anonify-common = { path = "../../core/common" }
anonify-runtime = { path = "../../core/runtime" }
anonify-host = { path = "../../core/host" }
anonify-event-watcher = { path = "../../core/event-watcher" }
sgx_types = "1.1.0"
actix-web = "1.0"
failure = "0.1"
log = "0.4"
env_logger = "0.7"
ed25519-dalek = "1.0.0-pre.2"
hex = "0.4"
