[package]
name = "anonify-stf"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-std = { package = "serde", version = "1", default-features = false, optional = true }
serde-sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.1.0", default-features = false, optional = true }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
byteorder = { version = "1", default-features = false }
bincode-std = { package = "bincode", version = "1.2", optional = true }
bincode-sgx = { package = "bincode", git = "https://github.com/mesalock-linux/bincode-sgx.git", rev = "sgx_1.1.0", optional = true }

[features]
default = ["std"]
std = [
    "serde-std/std",
    "serde-std/derive",
    "bincode-std",
]
sgx = [
    "serde-sgx",
    "serde-sgx/derive",
    "sgx_tstd",
    "bincode-sgx",
]
