[package]
name = "anonify-stf"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anonify-common = { path = "../../core/common", default-features = false }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[features]
default = ["std"]
std = [
    "anonify-common/std",
]
sgx = [
    "anonify-common/sgx",
    "sgx_tstd",
]
