[package]
name = "azure_client"
version = "0.1.0"
authors = ["glassonion1 <taisuke.fujita@layerx.co.jp>"]
edition = "2018"

[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
azure_core = { version = "0.1", git = "https://github.com/Azure/azure-sdk-for-rust.git" }
azure_storage = { version = "0.1", git = "https://github.com/Azure/azure-sdk-for-rust.git", default-features = false, features = ["blob"] }

[features]
default = ["blob"]
blob = []